# PARADIG-PROG-N1-ESTRUT-C99

./: README.md
lib/: exported_functions.c  exported_functions.h  functions.c  functions.h  functions_arremesso.c  functions_arremesso.h  functions_ginastica.c  functions_ginastica.h  functions_stdin.c  functions_stdin.h  internal_functions.h
src/: main.c
tests/: CMakeLists.txt  tests_functions.c  tests_functions.h
